test/parser/positive/OmittedVoidReturn.java
public class OmittedVoidReturn {
  public OmittedVoidReturn() {}
  public void m() {
    /* return; */
  }
}
